# LurkbotV5

./: .gitignore  .gitmodules  README.md  docker-compose.yml  start_test_postgres.sh
backend/: Cargo.toml  Dockerfile  readme.md  sqlx-data.json
backend/BCF/src/: lib.rs
backend/backend/: Cargo.toml
backend/backend/src/: backend.rs  main.rs  northwood.rs
backend/backend/src/routes/: mod.rs  query.rs
backend/bcf/: Cargo.toml
backend/lurkbot_backend/: Cargo.toml
backend/lurkbot_backend/src/: backend_task.rs  main.rs
backend/lurkbot_common/: Cargo.toml
backend/lurkbot_common/src/: lib.rs
backend/lurkbot_database/: Cargo.toml
backend/lurkbot_database/migrations/2023-07-23-212004_init/: down.sql  up.sql
backend/lurkbot_database/src/: lib.rs  models.rs  schema.rs
backend/lurkbot_northwood/: Cargo.toml
backend/lurkbot_northwood/src/: lib.rs
backend/lurky/: Cargo.toml  sqlx-data.json
backend/lurky/src/: config.rs  lib.rs  query.rs
backend/lurky/src/db/: mem.rs  mod.rs  postgres.rs
backend/lurky_api/: Cargo.toml  build.rs
backend/lurky_api/src/: backend.rs  main.rs
backend/lurky_common/: Cargo.toml
backend/lurky_common/src/: lib.rs
backend/lurky_db/: Cargo.toml
backend/lurky_db/src/: lib.rs
backend/migrate/: Cargo.toml
backend/migrate/src/: main.rs
backend/migrations/: 20230319172153_inital.sql
backend/northwood_api/: Cargo.toml
backend/northwood_api/src/: lib.rs
backend/src/: backend.rs  config.rs  main.rs  northwood.rs  query.rs
backend/src/db/: mem.rs  mod.rs  postgres.rs
backend/src/routes/: basics.rs  mod.rs  query.rs
discord-bot/: Dockerfile  LurkbotV5.sln  docker-compose.yml
discord-bot/LurkbotV5/: Bot.cs  Configuration.cs  InternalConfig.cs  LocalConfig.cs  Log.cs  LurkbotV5.csproj  LurkbotV5.sln  Program.cs  Utility.cs
discord-bot/LurkbotV5/BaseClasses/: CommandBase.cs  CommandOptionsBase.cs  MentionCommandBase.cs
discord-bot/LurkbotV5/Commands/: CommandAddLevelRole.cs  CommandBackupChannel.cs  CommandBase.cs  CommandChannelMute.cs  CommandDestroyAppCommands.cs  CommandGetPFP.cs  CommandGetPlayerStats.cs  CommandKickUser.cs  CommandLeaderboard.cs  CommandLockdown.cs  CommandOptionsBase.cs  CommandParseUsers.cs  CommandPing.cs  CommandPlayers.cs  CommandPurge.cs  CommandRank.cs  CommandRemoveLevelRole.cs  CommandTimeout.cs
discord-bot/LurkbotV5/EventListeners/: MessageListener.cs  ReactionListener.cs  UserHandler.cs
discord-bot/LurkbotV5/Managers/: APIManager.cs  DiscordManager.cs  ServerListEmbedManager.cs  TranslationManager.cs
discord-bot/LurkbotV5/MentionCommands/: CommandCrushSkull.cs
discord-bot/LurkbotV5/SlashCommands/: CommandAddLevelRole.cs  CommandAddWarning.cs  CommandBackupChannel.cs  CommandBanUser.cs  CommandChannelMute.cs  CommandDestroyAppCommands.cs  CommandGetPFP.cs  CommandGetPlayerStats.cs  CommandGetWarnings.cs  CommandKickUser.cs  CommandLeaderboard.cs  CommandLockdown.cs  CommandParseUsers.cs  CommandPing.cs  CommandPlayers.cs  CommandPurge.cs  CommandRank.cs  CommandRemoveLevelRole.cs  CommandRemoveWarning.cs  CommandResetWarnings.cs  CommandSetNameExclude.cs  CommandSetRank.cs  CommandTimeout.cs
