[package]
name = "lurkbot_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-diesel = { version = "0.4.1", features = ["sqlite", "serde"] }
diesel = { version = "2.1.0", features = ["sqlite", "time"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
lurkbot_common = { path = "../lurkbot_common" }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
serde_with = { version = "3.1.0", features = ["time_0_3"] }
time = "0.3.23"
