[package]
name = "lurkbot_northwood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.103"
lurkbot_common = { path = "../lurkbot_common" }
siphasher = "0.3"
serde = { version = "1.0.174", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
