[package]
name = "lurky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
chrono = { version = "0.4.24", features = ["serde"] }
parking_lot = "0.12.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_with = { version = "2.3.1", features = ["chrono_0_4"] }
sqlx = { version = "0.6.3", features = ["chrono", "postgres", "json", "runtime-tokio-rustls", "offline"] }
