[package]
name = "lurky_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = "0.14.26"
lurky_common = {path="../lurky_common"}
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["validate-request", "auth"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
